# self-healing-agent

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run_frontend.sh  run_gateway.sh  run_mock_api.sh  setup.sh  test_healing.py
app/: config.py  logging_config.py  main.py  models.py
app/database/: __init__.py  mongodb_client.py  redis_client.py
app/healer/: __init__.py  agent_stream.py  schema_healer.py  schema_registry.py
app/proxy/: __init__.py  proxy_service.py
app/routes/: __init__.py  admin_routes.py  chaos_routes.py  dashboard_routes.py  mock_routes.py  playground_routes.py  proxy_routes.py
frontend/: .env.example  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/.next/: trace
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
frontend/.next/static/development/: _buildManifest.js
frontend/app/: globals.css  layout.tsx  page.tsx
mock_api/: __init__.py  main.py
